# Programming

./: 8.c  README.md
lab10_struct/: main.c  point.c  point.h
lab12_libraries/: lab_for_3
lab12_libraries/lab_for_4/: README.md  main.c  pcgames.c  pcgames.h
lab12_libraries/lab_for_5/: README.md  pcgames.c  pcgames.h
lab13_Make_CMake/lab_for_3/: Makefile  README.md
lab13_Make_CMake/lab_for_3/include/: pcgames.h
lab13_Make_CMake/lab_for_3/src/: main.c
lab13_Make_CMake/lab_for_4/: CMakeLists.txt  README.md
lab13_Make_CMake/lab_for_4/src/: pcgames.c
lab13_Make_CMake/lab_for_5/: README.md
lab13_Make_CMake/lab_for_5/cmake_task/: CMakeLists.txt
lab13_Make_CMake/lab_for_5/cmake_task/background/: CMakeLists.txt
lab13_Make_CMake/lab_for_5/cmake_task/pipes/: CMakeLists.txt
lab14_Linked_List/lab_for_3/: main.c
lab15_files/: lab_for_3
lab15_files/lab_for_4/: main.c  staff.csv
lab16_threads/: README.md  thread1.c  thread2.c  thread3.c  thread4.c  thread5.c  thread6.c
lab17_unit_tests/: README.md  main.c  math.c  math.h  tests.c
lab9_git/: README.md  mergesort.py  sort.c  sreen.txt
lab_GDB/: task1.c  task2.c  task3.c  task4.c
laba8/: 8.c
